cmake_minimum_required (VERSION 3.18)
PROJECT(MEMPOOL)
SET(SRC_LIST main.cpp mempool.cpp)
MESSAGE(STATUS "THIS IS BINARY DIR " ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "THIS IS SOURCE DIR " ${PROJECT_SOURCE_DIR})
MESSAGE(STATUS "THIS IS CMAKE_CURRENT_SOURCE_DIR " ${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES("simple_mempool")
INCLUDE_DIRECTORIES("util")
set(SUB_DIR_LIST "${CMAKE_CURRENT_SOURCE_DIR}/simple_mempool" "${CMAKE_CURRENT_SOURCE_DIR}/util")
foreach(SUB_DIR ${SUB_DIR_LIST})
#遍历源⽂件
	aux_source_directory(${SUB_DIR} SRC_LIST)
endforeach()

ADD_EXECUTABLE(mempool ${SRC_LIST})
